[gd_scene load_steps=11 format=2]

[ext_resource path="res://songs/CalopsitaSong.gd" type="Script" id=1]
[ext_resource path="res://songs/cantoras108bpm-001calopsita.ogg" type="AudioStream" id=2]
[ext_resource path="res://beatmap/BeatSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://songs/cantoras.ogg" type="AudioStream" id=4]
[ext_resource path="res://Battle.gd" type="Script" id=5]
[ext_resource path="res://Middle.tscn" type="PackedScene" id=6]
[ext_resource path="res://BeatDestroyer.tscn" type="PackedScene" id=8]
[ext_resource path="res://art/icons/icon_sapo.png" type="Texture" id=9]
[ext_resource path="res://art/icons/icon_calops.png" type="Texture" id=10]
[ext_resource path="res://Calopsita.tscn" type="PackedScene" id=11]

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
bpm = 108.0
multiplier = 2

[node name="Middle" parent="." instance=ExtResource( 6 )]

[node name="BeatSpawnerLeft" parent="." instance=ExtResource( 3 )]
position = Vector2( -121.299, 95.1365 )
icon = ExtResource( 9 )
delay_beats = 8
target_path = NodePath("../Middle")
beatmap = "res://songs/baixo.txt"

[node name="BeatSpawnerRight" parent="." instance=ExtResource( 3 )]
position = Vector2( 2031.17, 95.137 )
direction = Vector2( -1, 0 )
icon = ExtResource( 10 )
delay_beats = 8
target_path = NodePath("../Middle")
beatmap = "res://songs/calopsita.txt"
character_path = NodePath("../PodiumRight/Character")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="BeatDestroyer" parent="." instance=ExtResource( 8 )]
direction = Vector2( -1, 0 )

[node name="BeatDestroyer2" parent="." instance=ExtResource( 8 )]
position = Vector2( 1062, 96 )

[node name="PodiumLeft" type="Node2D" parent="."]
position = Vector2( 437.165, 969.54 )
scale = Vector2( 1.21303, 1.21303 )

[node name="PodiumRight" type="Node2D" parent="."]
position = Vector2( 1519.9, 1014.42 )
scale = Vector2( -1.213, 1.213 )

[node name="Character" parent="PodiumRight" instance=ExtResource( 11 )]

[node name="CalopsitaSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
script = ExtResource( 1 )

[connection signal="song_started" from="." to="CalopsitaSong" method="_on_Battle_song_started"]
